// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GAAuthorize should hide the component during authorization 2`] = `
<div>
  <div
    class="ga-authorize hide svelte-1gffgbd"
  >
    <article
      class="widget svelte-pntwh0"
    >
       
      <section
        class="widget-body svelte-4p1s5s"
      >
        <div
          class="auth-signin svelte-1gffgbd"
        >
          <p>
            Signin required
          </p>
           
          <p>
            To see content reports you need to Sign in and allow this dashboard
            to access your Google Analytics data
          </p>
           
          <div
            class="auth-button svelte-1gffgbd"
            id="auth-button"
          />
        </div>
      </section>
    </article>
  </div>
</div>
`;

exports[`GAAuthorize should render the GAAuthorize component with auth button 1`] = `
<div>
  <div
    class="ga-authorize  svelte-1gffgbd"
  >
    <article
      class="widget svelte-pntwh0"
    >
       
      <section
        class="widget-body svelte-4p1s5s"
      >
        <div
          class="auth-signin svelte-1gffgbd"
        >
          <p>
            Signin required
          </p>
           
          <p>
            To see content reports you need to Sign in and allow this dashboard
            to access your Google Analytics data
          </p>
           
          <div
            class="auth-button svelte-1gffgbd"
            id="auth-button"
          />
        </div>
      </section>
    </article>
  </div>
</div>
`;

exports[`GAAuthorize should render the GAAuthorize component with error when missing permission - auth button 1`] = `
<div>
  <div
    class="ga-authorize  svelte-1gffgbd"
  >
    <article
      class="widget svelte-pntwh0"
    >
       
      <section
        class="widget-body svelte-4p1s5s"
      >
        <div
          class="auth-signin svelte-1gffgbd"
        >
          <div
            class="auth-error svelte-1gffgbd"
          >
            You do not have permission to see content reports for Google
              Analytics view ID:
              
            test-view-id
            . Please contact your Google Analytics administrator.
          </div>
           
          <div
            class="auth-button svelte-1gffgbd"
            id="auth-button"
          />
        </div>
      </section>
    </article>
  </div>
</div>
`;

exports[`GAAuthorize should render the GAAuthorize component with error when missing permission - service account token 3`] = `
<div>
  <div
    class="ga-authorize  svelte-1gffgbd"
  >
    <article
      class="widget svelte-pntwh0"
    >
       
      <section
        class="widget-body svelte-4p1s5s"
      >
        <div
          class="auth-signin svelte-1gffgbd"
        >
          <div
            class="auth-error svelte-1gffgbd"
          >
            You do not have permission to see content reports for Google
              Analytics view ID:
              
            test-view-id
            . Please contact your Google Analytics administrator.
          </div>
           
          <div
            class="auth-button svelte-1gffgbd"
            id="auth-button"
          />
        </div>
      </section>
    </article>
  </div>
</div>
`;

exports[`GAAuthorize should render the GAAuthorize component with error when token request fails 3`] = `
<div>
  <div
    class="ga-authorize  svelte-1gffgbd"
  >
    <article
      class="widget svelte-pntwh0"
    >
       
      <section
        class="widget-body svelte-4p1s5s"
      >
        <div
          class="auth-signin svelte-1gffgbd"
        >
          <div
            class="auth-error svelte-1gffgbd"
          >
            Unable to retrieve access token. Check your installation
              parameters.
          </div>
           
          <div
            class="auth-button svelte-1gffgbd"
            id="auth-button"
          />
        </div>
      </section>
    </article>
  </div>
</div>
`;
